# portmanteau

./: .gitignore  default.nix  flake.nix  portmanteau.py  pyproject.toml  setup.py  shell.nix
tests/: test_portmanteau.py
